--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,11 @@ html {
     display: block;
     height: 2.5rem;
     padding: 0.15rem 0.75rem;    
+    transition: 0.25s ease-in-out all;
     width: 100%;
+}
+.inputbox-oligo:hover {
+    background-color: var(--ui-color-dark);
 }
 .faded {
     color: var(--ui-color-faded) !important;
@@ -66,6 +70,10 @@ html {
     margin: 0 auto var(--element-bottom-spacing);
     min-height: 8rem;
     padding: 0.5rem 0.75rem;
+    transition: 0.25s ease-in-out all;
+}
+.oligo-output-container:hover {
+    background-color: var(--ui-color-dark);
 }
 .oligo-output-title {
     color: var(--ui-color-faded);
@@ -89,13 +97,21 @@ th {
     border: 2px solid var(--ui-color-dark);
     font-size: 1.1rem;
     font-weight: bold;
-    
     padding: 0.5rem 0.75rem;
+    transition: 0.25s ease-in-out all;
 }
 td {
     border: 2px solid var(--ui-color-dark);
     padding: 0.5rem 0.75rem;
     text-align: right;
+    transition: 0.25s ease-in-out all;
+}
+td:hover, th:hover {
+    background-color: var(--ui-color-dark);
+    transform: scale(1.025);
+}
+.table-base-headings > th:hover, #row-Total > th:hover, #row-Total > td:hover {
+    color: var(--ui-color-faded);
 }
 .table-cell-A, .table-cell-G, .table-cell-U {
     background-color: 0;
