Change LNA colour to a darker more legible orange.

--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@ td:hover, th:hover {
     color: green;
 }
 .base-type-LNA {
-    color: orange;
+    color: #c78100;
 }
 .base-type-OMe {
     color: blue;
